--- a/BackJoon/Class단계/2단계/1966번_ 프린터 큐/1966번_ 프린터 큐.vcxproj
+++ b/BackJoon/Class단계/2단계/1966번_ 프린터 큐/1966번_ 프린터 큐.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3cca273f-f2a8-4fa1-b4e6-203b85f46e53}</ProjectGuid>
-    <RootNamespace>My1436번영화감독숌</RootNamespace>
+    <ProjectGuid>{3a71422d-a19e-4a72-bb76-cc66dd7acb81}</ProjectGuid>
+    <RootNamespace>My1966번프린터큐</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
