--- a/WinAPI/길찾기 프로그램/길찾기 프로그램.vcxproj
+++ b/WinAPI/길찾기 프로그램/길찾기 프로그램.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DrawModule.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -157,6 +158,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DrawModule.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
